[package]
name = "gsw-rs"
version = "0.1.0"
edition = "2021"
description = "GSW (Gentry-Sahai-Waters) lattice-based fully homomorphic encryption in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/10d9e/gsw-rs"
documentation = "https://docs.rs/gsw-rs"
keywords = ["cryptography", "homomorphic-encryption", "fhe", "lattice", "gsw"]
categories = ["cryptography"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
